force-app/main/default/objects/Special_Case__c/Special_Case__c.object-meta.xml
<CustomObject>
    <label>Special Case</label>
    <nameField>
        <label>Special_Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>