force-app/main/default/objects/Special_Case__c/fields/Chatbot_BookingRef__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_BookingRef__c</fullName>
    <label>Chatbot_BookingRef</label>
    <length>255</length>
    <type>Text</type>
</CustomField>