force-app/main/default/objects/Special_Case__c/fields/Chatbot_CallSupportTime__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_CallSupportTime__c</fullName>
    <label>Chatbot_CallSupportTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>