force-app/main/default/objects/Special_Case__c/fields/Chatbot_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_CustomerType__c</fullName>
    <label>Chatbot_CustomerType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>