force-app/main/default/objects/Special_Case__c/fields/Chatbot_Language__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_Language__c</fullName>
    <label>Chatbot_Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>