force-app/main/default/objects/Special_Case__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>TextArea</type>
</CustomField>